# Sentinel

./: ENGINEERING_DESIGN.md  README.md  pyproject.toml
cloud/: __init__.py  app.py
cloud/routes/: webhooks.py
cloud/services/: policy_events.py
cloud/tests/: test_app.py
libs/sentinel_shared/: __init__.py  models.py  protocol.py  workflow_schema.py
